--- a/wp-content/themes/promillus/style.css
+++ b/wp-content/themes/promillus/style.css
@@ -32,6 +32,7 @@ margin-left: -55%;}
   width: 100%; 
   opacity: 1;
   z-index: 9;
+  margin-top: -45px;
 }
 
 .header-internas{
@@ -39,35 +40,35 @@ margin-left: -55%;}
     background-size: cover;
     height:260px;
     background-position: center; 
+    margin-bottom: 1rem;
 }
 #nav { width: 410px; float: right; margin-top: 20px; }
 #logo a { color: #000; position: absolute;top: 1rem;z-index: 555; font-family: 'Fredoka One', cursive;
 text-decoration: none; float: left; font-size: 30px; font-weight: bold; }
 .container{ margin: 0em auto; padding: 1rem; width: 100%; max-width: 75.000rem;}
-.header{/*max-width: 1290px;/padding-right: 316px; overflow:hidden*/}
 /*banner*/
 .banner img{max-height: 682px !important; /*max-width: 1046px;*/}
 .cycle-pager{background: #fff;float: right; width: 100px !important; padding: 5px; bottom: 0px !important; max-height: 50px;right: 0;}
-.cycle-pager span{border:0 !important ;background: #2461B1 !important; border-color: #2461B1 !important; width: 0.938rem !important; height: 0.938rem !important; margin-top: 0.813rem !important}
+.cycle-pager span{border:0 !important ;background: rgb(0,151,219) !important; border-color: rgb(0,151,219) !important; width: 0.938rem !important; height: 0.938rem !important; margin-top: 0.813rem !important}
 span.cycle-pager-active{border:0 !important ;background: #E976BB !important; border-color: #E976BB !important; padding: 0 !important; bottom: 0px !important; width: 0.938rem !important; height: 0.938rem !important;}
 
 
 .icon-header{padding:15%;/*max-height: 270px;*/ width: 100% ; transition: all 0.3s ease 0s;margin-top: 15px;}
-
+.mamadeira, .coracao {opacity: 0.2;}
 /**/
 .title-widget{ font-size: 1.5em; ;text-align: center; width: 100%; display: block; text-transform: uppercase; color: #fff; margin: 0; padding-bottom:10px;}
 .title-widget a{color: #FFF;}
 .menu .page_item:first-child, .menu .menu-item:first-child{padding-left: 0 !important;}
-.menu .page_item, .menu .menu-item{padding-left: 81px}
+.menu .page_item, .menu .menu-item{padding-left: 92px}
 
-.menu .page_item a, .menu .menu-item a{font-family: 'Fredoka One', cursive; text-transform: uppercase; color: #2461B1;opacity:1 !important; text-rendering: optimizeLegibility; }
+.menu .page_item a, .menu .menu-item a{font-family: 'Fredoka One', cursive; text-transform: uppercase; color: rgb(0,151,219);opacity:1 !important; text-rendering: optimizeLegibility; }
 .menu .current_page_item a{color: #ccc;}
 
 .widget_image img{width:100%}
-.title-destaque a, .title-destaque a:visited{font-family: 'Fredoka One', cursive; font-size: 2rem; text-transform: uppercase; color: #2461B1; font-weight: normal; line-height: 1.5; text-decoration:none;}
+.title-destaque a, .title-destaque a:visited{font-family: 'Fredoka One', cursive; font-size: 2rem; text-transform: uppercase; color: rgb(0,151,219); font-weight: normal; line-height: 1.5; text-decoration:none;}
 .title-destaque a:hover{color:#F9B5CC;}
-.txt-destaque{font-size:.8rem; padding-top:1.7rem; color: #D3CFCF;}
-.saiba-mais{color:#0F4B8F; text-transform:uppercase; text-decoration: underline; margin-top: 0.5rem;display: block; font-weight:bold}
+.txt-destaque{font-size:.8rem; padding-top:1.7rem; color: #7a7a7a;}
+.saiba-mais{color:rgb(0,151,219); text-transform:uppercase; text-decoration: underline; margin-top: 0.5rem;display: block; font-weight:bold}
 .saiba-mais:hover{color: #F9B5CC;}
 .cap{font-family: 'Fredoka One', cursive; font-size:2.5rem;}
 .cap-title{font-size:1.5rem; text-transform:uppercase;}
@@ -77,8 +78,9 @@ span.cycle-pager-active{border:0 !important ;background: #E976BB !important; bor
 #banner-home .bg .textwidget a {color:#fff; font-weight:bold;}
 .txt-width{padding-left:1rem}
 .bg.blue:hover img, .bg.blue2:hover img, .bg.rosa:hover img, .bg.rosa2:hover img{margin-top: -177px; transition: all 0.3s ease 0s;}
-ul.tags li a{color:#F9B5CC; font-size:1.5rem;font-family: 'Fredoka One', cursive;}
-ul.tags li a:after{content:"+"; display:block;font-size:1.5rem;font-family: 'Fredoka One', cursive; float:left;}
+ul.tags li a{color:#F9B5CC; font-size:1.5rem;font-family: 'Fredoka One', cursive;float: left;
+clear: left;}
+ul.tags li:after{content:"+"; display:block;color:#F9B5CC; font-size:1.5rem;font-family: 'Fredoka One', cursive; float:left;}
 
 .copy{color:#fff;}
 .wp-post-image{width:100%;height: auto;}
@@ -96,7 +98,8 @@ ul.tags li a:after{content:"+"; display:block;font-size:1.5rem;font-family: 'Fre
 .cat-grid li .caption{
 border-width: medium 1px 1px;
 border-style: none solid solid;
-border-color: -moz-use-text-color #ECECEC #ECECEC;
+border-color: #ECECEC;
+-moz-use-text-color: #ECECEC #ECECEC;
 -moz-border-top-colors: none;
 -moz-border-right-colors: none;
 -moz-border-bottom-colors: none;
@@ -105,28 +108,28 @@ border-image: none;}
 .cat-grid .title-destaque a{font-size:1rem;}
 .cat-grid .txt-destaque{padding-top:0;}
 
-.title{font-family: 'Fredoka One', cursive; font-size: 2rem; text-transform: uppercase; color: #2461B1; font-weight: normal; line-height: 1.5; text-decoration:none;}
+.title{font-family: 'Fredoka One', cursive; font-size: 2rem; text-transform: uppercase; color: rgb(0,151,219); font-weight: normal; line-height: 1.5; text-decoration:none;}
 
-.post_content p{font-size: 0.8rem; padding-top:1.7rem; color: #D3CFCF;}
+.post_content p{font-size: 0.8rem; /*padding-top:1.7rem; */color: #7a7a7a;}
 
 
 .breadcrumb {
     padding: 8px 15px;
     margin: 0px 0px 20px;
     list-style: outside none none;
-    border-bottom: 1px solid #D3CFCF;
-    border-top: 1px solid #D3CFCF;
-    color:#D3CFCF;
+    border-bottom: 1px solid #7a7a7a;
+    border-top: 1px solid #7a7a7a;
+    color:#7a7a7a;
 }
 
 .breadcrumb li {display: inline;}
 
-.breadcrumb a{color:#D3CFCF;}
+.breadcrumb a{color:#7a7a7a;}
 
-.breadcrumb strong{font-weight: bold; color:#2461B1;}
+.breadcrumb strong{font-weight: bold; color:rgb(0,151,219);}
 
 aside .title-widget{
-    color:#2461B1;
+    color:rgb(0,151,219);
     text-align:left;
     font-weight: bold;
 }
@@ -150,9 +153,29 @@ aside .txt-destaque{padding-top:0;}
 .meta-info ul li{float:left;}
 
 .redes{text-align: right;margin-top: 0; font-size:1.5rem;}
-.redes .fa{color:#cacaca;}
+.redes .fa{color:#cacaca; padding-left: 1rem;}
 
-
+.form-input{border: 1px solid #eaeaea; padding: 3px 10px 3px 0px;}
+.form-input .fa{float:left; padding: 3px 10px;}
+.wpcf7 input[type="text"],
+.wpcf7 input[type="email"],
+.wpcf7 textarea
+{
+    background-color: #fff;
+    color: #000;
+    width: 80%;
+    border:none;
+    font-family: 'Open Sans', sans-serif !important; 
+}
+.wpcf7 input[type="text"]:focus,
+.wpcf7 input[type="email"]:focus,
+.wpcf7 textarea:focus{
+    outline: none !important;
+}
+.wpcf7 .btn{width:100%;}
+.wpcf7 .btn.blue.inverted{background:#F9B5CC; border-color:#F9B5CC;font-size: 1.2rem;}
+.wpcf7 .btn.blue.inverted:hover{background:rgb(0,151,219); border-color:rgb(0,151,219);}
+.wpcf7 .col-6, .wpcf7 .col-12{margin-top:0; margin-bottom:0;}
 .tooltip{
     display: inline;
     position: relative;
@@ -181,6 +204,82 @@ aside .txt-destaque{padding-top:0;}
     position: absolute;
     z-index: 99;
 }
+
+.voltarTopo {
+    background: none repeat scroll 0 0 rgb(0,151,219) !important;
+    bottom: 20px !important;
+    color: #FFFFFF;
+    display: block;
+    font-size: 1rem;
+    font-weight: bold;
+    position: fixed;
+    right: 30px;
+    text-transform: uppercase;
+    padding:2rem;
+    outline-color:rgb(0,151,219);
+    opacity:0.8;
+}
+
+.voltarTopo .fa{color:#fff;}
+
+#comments{
+    width:630px;
+    float:left;
+    border-top:1px solid #bebebe;
+    }
+ 
+#comments h3{
+    font-size:14px;
+    margin:20px 0;
+    }
+ 
+ol.commentlist{
+    list-style:none;
+    }
+ 
+ol.commentlist li{
+    margin-bottom:30px;
+    }
+ 
+ol.commentlist ul{
+    margin:0px;
+    }
+ 
+ol.commentlist ul li{
+    margin:20px 20px 20px 40px;
+    }
+ 
+#respond{
+    margin:0 0 30px 0;
+    clear:both;
+    }
+ 
+#respond form label{
+    float:left;
+    clear:left;
+    width:60px;
+    text-align:right;
+    margin-right:10px;
+    }
+ 
+#respond form input{
+    float:left;
+    width:250px;
+    margin-bottom:10px;
+    }
+ 
+#respond form textarea{
+    float:left;
+    width:400px;
+    height:100px;
+    margin-bottom:10px;
+    }
+ 
+#respond form input.commentsubmit{
+    float:left;
+    margin-left:70px;
+    }
+
 @media only screen and (max-width: 1200px){
     .container{width: 800px;}
     .bg{max-height:14rem}
