--- a/wp-content/themes/promillus/style.css
+++ b/wp-content/themes/promillus/style.css
@@ -62,7 +62,7 @@ span.cycle-pager-active{border:0 !important ;background: #E976BB !important; bor
 .menu .page_item, .menu .menu-item{padding-left: 92px}
 
 .menu .page_item a, .menu .menu-item a{font-family: 'Fredoka One', cursive; text-transform: uppercase; color: rgb(0,151,219);opacity:1 !important; text-rendering: optimizeLegibility; }
-.menu .current_page_item a{color: #ccc;}
+.menu .current_page_item a{color: #F9B5CC;}
 
 .widget_image img{width:100%}
 .title-destaque a, .title-destaque a:visited{font-family: 'Fredoka One', cursive; font-size: 2rem; text-transform: uppercase; color: rgb(0,151,219); font-weight: normal; line-height: 1.5; text-decoration:none;}
@@ -153,7 +153,7 @@ aside .txt-destaque{padding-top:0;}
 .meta-info ul li{float:left;}
 
 .redes{text-align: right;margin-top: 0; font-size:1.5rem;}
-.redes .fa{color:#cacaca; padding-left: 1rem;}
+.redes .fa{color:#fff; padding-left: 1rem;}
 
 .form-input{border: 1px solid #eaeaea; padding: 3px 10px 3px 0px;}
 .form-input .fa{float:left; padding: 3px 10px;}
@@ -165,7 +165,8 @@ aside .txt-destaque{padding-top:0;}
     color: #000;
     width: 80%;
     border:none;
-    font-family: 'Open Sans', sans-serif !important; 
+    font-family: 'Open Sans', sans-serif !important;
+    font-size:1rem;
 }
 .wpcf7 input[type="text"]:focus,
 .wpcf7 input[type="email"]:focus,
@@ -222,30 +223,22 @@ aside .txt-destaque{padding-top:0;}
 
 .voltarTopo .fa{color:#fff;}
 
-#comments{
-    width:630px;
-    float:left;
-    border-top:1px solid #bebebe;
-    }
+
+#comments h3{ font-size:1rem; margin:20px 0;}
  
-#comments h3{
-    font-size:14px;
-    margin:20px 0;
-    }
- 
-ol.commentlist{
+ul.commentlist{
     list-style:none;
     }
  
-ol.commentlist li{
+ul.commentlist li{
     margin-bottom:30px;
     }
  
-ol.commentlist ul{
+ul.commentlist ul{
     margin:0px;
     }
  
-ol.commentlist ul li{
+ul.commentlist ul li{
     margin:20px 20px 20px 40px;
     }
  
