--- a/wp-content/themes/promillus/style.css
+++ b/wp-content/themes/promillus/style.css
@@ -20,6 +20,21 @@ a{text-decoration:none}
 body{ font-family: 'Open Sans', sans-serif !important; }
 .fa{color:#F9B5CC;}
 .no-padding-top{padding-top:0px !important;}
+.modal, .mc4wp-alert{    
+	z-index: 9999999999;
+    position: fixed;
+    width: 500px !important;
+    height:300px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background: #fff;
+    /*padding: 1rem;*/
+    display:none;
+	
+}
 .col-6.no-margin{width:50%;}
 .col-5.no-margin{width:42.3%;}
 #banner span, #banner img{background-size:cover; max-height:682px; width: 1050px;}
@@ -309,13 +324,14 @@ ul.commentlist ul li{
     font-size: 1rem;}
 }*/
 @media only screen and (max-width: 767px) {
+    #logo{margin-left: 1rem;}
     .container{width: auto;}
     .banner{height: auto !important}
     .icon-header {padding: 0px; width: 30%;float: left;}
     #banner-home.container {
     padding: 0px;
 }
-.home #logo a {
+#logo a {
     margin-left: 0;
     width: 100%;
     text-align: center;
@@ -324,6 +340,8 @@ ul.commentlist ul li{
 }
 @media only screen and (max-width: 699px) and (min-width: 361px) {
 /*@media only screen and (max-width: 640px) and (min-width: 361px) {*/
+    .header-widget{display:none;}
+    .box-post .size-full{width:100%; height:100%;}
     /*.cycle-slide {max-width: 206% !important;}*/
     .title-widget {font-size: 1.5rem;padding: 1rem;}
     /*.bg{max-height: 14.7rem;}*/
@@ -334,6 +352,7 @@ ul.commentlist ul li{
         footer{text-align: center;}
 .redes{text-align: center;}
 .redes a{ padding:1rem;}
+
     
 }
 
@@ -356,6 +375,8 @@ ul.commentlist ul li{
 /*.home #logo a {
     margin-left: 15%;
 }*/
+.header-widget{display:none;}
+.box-post .size-full{width:100%; height:100%;}
 .bg {
     max-height: 21.3rem;
 }
